--- a/pom.xml
+++ b/pom.xml
@@ -13,62 +13,23 @@
 
 	<url>https://github.com/algorythmist/jquotes/</url>
 
-	<developers>
-		<developer>
-			<name>Dimitri Papaioannou</name>
-		</developer>
-	</developers>
-
-	<organization>
-		<name>TecAceT</name>
-		<url>http://www.tecacet.com</url>
-	</organization>
-
-	<licenses>
-		<license>
-			<!--TODO -->
-		</license>
-	</licenses>
-
-	<scm>
-		<url>https://github.com/algorythmist/jquotes</url>
-		<connection>scm:git:git@github.com:algorythmist/jquotes.git</connection>
-		<developerConnection>scm:git:git@github.com:algorythmist/jquotes.git</developerConnection>
-	</scm>
-
-	<ciManagement>
-		<!-- TODO -->
-	</ciManagement>
-
-	<issueManagement>
-		<system>GitHub</system>
-		<url>https://github.com/algorythmist/jquotes/issues</url>
-	</issueManagement>
-
-	<distributionManagement>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
-
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<jflat.version>1.2.0</jflat.version>
-		<slf4j.version>1.7.30</slf4j.version>
-		<junit.version>4.13.1</junit.version>
-		<jacoco.version>0.8.5</jacoco.version>
-		<coverage.totalLineRate>0.87</coverage.totalLineRate>
-		<coverage.missedclasses>0</coverage.missedclasses>
-        <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
-        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
-        <maven-gpg.version>1.6</maven-gpg.version>
-    </properties>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<jflat.version>1.3.8</jflat.version>
+		<slf4j.version>[2.0,)</slf4j.version>
+		<jackson.version>2.14.2</jackson.version>
+		<lombok.version>[1.18.26,)</lombok.version>
+		<junit-jupiter.version>[5.9,)</junit-jupiter.version>
+	</properties>
 
 	<dependencies>
-        <dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.10.0</version>
+		</dependency>
+		<dependency>
             <groupId>com.tecacet</groupId>
             <artifactId>jflat-core</artifactId>
             <version>${jflat.version}</version>
@@ -79,19 +40,39 @@
 			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>${slf4j.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit-jupiter.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
 
 	<repositories>
 		<repository>
@@ -99,109 +80,5 @@
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</repository>
 	</repositories>
-
-	<build>
-		<plugins>
-			<!-- Sonatype deployment -->
-			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>${nexus-staging-maven-plugin.version}</version>
-				<extensions>true</extensions>
-				<configuration>
-					<serverId>ossrh</serverId>
-					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-					<autoReleaseAfterClose>true</autoReleaseAfterClose>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>${maven-source-plugin.version}</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar-no-fork</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>${maven-javadoc-plugin.version}</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <version>${maven-gpg.version}</version>
-                <executions>
-                    <execution>
-                        <id>sign-artifacts</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-			<!-- Jacoco Coverage report -->
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>${jacoco.version}</version>
-				<configuration>
-					<rules>
-						<rule>
-							<element>BUNDLE</element>
-							<limits>
-								<limit implementation="org.jacoco.report.check.Limit">
-									<counter>LINE</counter>
-									<value>COVEREDRATIO</value>
-									<minimum>${coverage.totalLineRate}</minimum>
-								</limit>
-								<limit implementation="org.jacoco.report.check.Limit">
-									<counter>CLASS</counter>
-									<value>MISSEDCOUNT</value>
-									<maximum>${coverage.missedclasses}</maximum>
-								</limit>
-							</limits>
-						</rule>
-					</rules>
-				</configuration>
-				<executions>
-					<execution>
-						<id>pre-unit-test</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>post-unit-test</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>verify</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
