--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,15 @@
 		<jackson.version>2.14.2</jackson.version>
 		<lombok.version>[1.18.26,)</lombok.version>
 		<junit-jupiter.version>[5.9,)</junit-jupiter.version>
+		<okhttp.version>4.10.0</okhttp.version>
+		<commons-io.version>2.11.0</commons-io.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>okhttp</artifactId>
-			<version>4.10.0</version>
+			<version>${okhttp.version}</version>
 		</dependency>
 		<dependency>
             <groupId>com.tecacet</groupId>
@@ -52,7 +54,7 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.11.0</version>
+			<version>${commons-io.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
