--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,9 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
+      env: # lookup key as an environment variable
+        IEX_TOKEN: ${{ secrets.IEX_TOKEN }}
+        TIINGO_TOKEN: ${{ secrets.TIINGO_TOKEN }}
       run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
