--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,11 @@
 
         <jflat.version>1.4.0</jflat.version>
         <slf4j.version>[2.0,)</slf4j.version>
-        <jackson.version>2.15.3</jackson.version>
+        <jackson.version>2.18.0</jackson.version>
         <lombok.version>[1.18.26,)</lombok.version>
         <junit-jupiter.version>[5.10,)</junit-jupiter.version>
         <okhttp.version>4.12.0</okhttp.version>
-        <commons-io.version>2.11.0</commons-io.version>
+        <commons-io.version>[2.17,)</commons-io.version>
 
         <!-- Deployment -->
         <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
@@ -58,6 +58,7 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
